# Doc-Consult-Agent

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  GEMINI.md  GovAssist Ethiopia (GAE) — Final, Detailed PRD & Technical Specification.md  LICENSE  README.md  WORKFLOW.md  WORKTREES.md  browser consol.md  change_provider_plan.md  docker-compose.yml  docker-worktree-setup.md  docker_setup_plan.md  frontend-design-plan.md  frontend_overhaul_plan.md  gemini_orchestrator.sh  govassist-production-hardening-plan.md  implementation-plan-hardening-gaps.md  implementation_plan_v2.md  integration_report.md  integration_verification_plan.md  pr_summary.md  testing_plan.md  testing_plan_v2.md  ui_smoke_test.sh  ui_test.py
.venv_test/: pyvenv.cfg
Frontend-UI/: Ux-from-ChatGpt.md
agents/: .dockerignore  .env.example  AGENTS.md  Dockerfile  pytest.ini  requirements.txt
backend/: .env.example  AGENTS.md  Dockerfile  eslint.config.js  package-lock.json  package.json
docs/: architecture.md  backup-restore.md  (+4 more)
ui/cli-tui/: README.md  USER_GUIDE.md  pyproject.toml
ui/cli-tui/src/gae_dev_console/: app.py  app.tcss  cli.py  config.py
ui/cli-tui/src/gae_dev_console/api/: client.py  temporal.py
ui/cli-tui/src/gae_dev_console/screens/: agent_runner.py  dashboard.py  workflow_detail.py  workflow_inspector.py
ui/cli-tui/src/gae_dev_console/widgets/: status.py  workflows.py
ui/cli-tui/tests/: conftest.py  test_agent_runner.py  test_app_nav.py  test_cli.py  test_dashboard.py  test_live_backend.py  test_live_dashboard.py  test_real_agent_scenarios.py  test_workflows.py
(+432 files in other folders)
