[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gae-dev-console"
version = "0.1.0"
description = "Developer Console TUI/CLI for GovAssist Ethiopia"
authors = [
  { name = "GovAssist Engineering", email = "engineering@govassist.et" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "temporalio>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black",
    "isort",
    "mypy"
]

[project.scripts]
gae-dev = "gae_dev_console.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gae_dev_console*"]
